--- a/css/home.css
+++ b/css/home.css
@@ -334,7 +334,7 @@
 		font-weight: 700;
 		color: transparent;
 		text-stroke-width: 2px;
-  	text-stroke-color: green;
+  	text-stroke-color: var(--primary-color);
 		-webkit-text-stroke-width: 2px;
   	-webkit-text-stroke-color: var(--primary-color);
 		left: -16px;
