--- a/css/home.css
+++ b/css/home.css
@@ -326,9 +326,58 @@
 @media (min-width: 992px) {
 
 	/* Slide Home */
+	.home .slide_home {
+		padding-top: 60px;
+		padding-bottom: 315px;
+		background: #f2f2f2;
+		margin-bottom: 0;
+	}
+
 	.home .slide_home .txt h1, 
 	.home .slide_home .txt h2 {
 		width: 420px;
+	}
+
+	.home .carousel-inner {
+		padding-top: 10px;
+		padding-bottom: 10px;
+	}
+
+	.home .carousel-control-next, .carousel-control-prev {
+		width: 9%;
+	}
+
+	.home .carousel-item.active {
+		width: 81%;
+		left: 10%;
+		border-radius: 20px;
+	}
+
+	.home .carousel-item {
+		box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
+		width: 81%;
+		left: 10%;
+	}
+
+	.home .carousel-item.active .row {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		background: white;
+		border-radius: 20px;
+	}
+
+	.home .carousel-control-next-icon {
+		background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23073242'%3e%3cpath d='M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+	}
+
+	.home .carousel-control-prev-icon {
+		background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23073242'%3e%3cpath d='M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z'/%3e%3c/svg%3e");
+	}
+
+	.home .slide_home .img {
+		border-top-left-radius: 20px;
+		border-bottom-left-radius: 20px;
 	}
 
 	.home .slide_home .txt {
@@ -352,6 +401,7 @@
 
 	/* Tecnología en Manos */
 	.home .tecnologia_en_manos {
+		margin-top: -200px;
 		margin-bottom: -200px;
 	}
 
