--- a/css/investigacion.css
+++ b/css/investigacion.css
@@ -56,6 +56,10 @@
 	margin-bottom: 15px;
 }
 
+.investigacion .centro_investigacion .col-md-6 p {
+	text-align: justify;
+}
+
 .investigacion .centro_investigacion .col-md-6:last-child p {
 	margin-bottom: 0;
 }
