Modificacion sector logos clientes en home

--- a/css/home.css
+++ b/css/home.css
@@ -194,15 +194,15 @@
 	padding-bottom: 50px;
 }
 
-.home .clientes .content_logos img {
-	width: 100px;
-}
-
 .home .clientes .content_logos {
 	display: flex;
 	justify-content: space-between;
 	flex-wrap: wrap;
 	gap: 15px 30px;
+}
+
+.home .clientes .content_logos img {
+	width: 100px;
 }
 /* Clientes end */
 
@@ -281,6 +281,12 @@
 	}
 	/* Ayuda y Doná end */
 
+	/* Clientes */
+	.home .clientes .content_logos {
+		gap: 15px 50px;
+	}
+	/* Clientes end */
+
 	/* Contacto */
 	.home .contacto {
 		padding-top: 60px;
@@ -324,6 +330,12 @@
 		margin-bottom: 0;
 	}
 	/* Tecnologías Para un Mundo Mejor end */
+
+	/* Clientes */
+	.home .clientes .content_logos {
+		gap: 15px 110px;
+	}
+	/* Clientes end */
 
 }
 
@@ -503,6 +515,16 @@
 	}
 	/* Tecnologías Para un Mundo Mejor end */
 
+	/* Clientes */
+	.home .clientes .content_logos {
+		gap: 15px 115px;
+	}
+
+	.home .clientes .content_logos img {
+		width: 150px;
+	}
+	/* Clientes end */
+
 }
 
 @media (min-width: 1200px) {
@@ -570,6 +592,12 @@
 		min-height: 680px;
 	}
 	/* Ayuda y Doná end */
+
+	/* Clientes */
+	.home .clientes .content_logos {
+		gap: 15px 75px;
+	}
+	/* Clientes end */
 
 }
 
@@ -670,5 +698,11 @@
 		width: 700px;
 	}
 	/* Slide Home end */
+
+	/* Clientes */
+	.home .clientes .content_logos {
+		gap: 15px 90px;
+	}
+	/* Clientes end */
 
 }
