Eliminacion de modulo donacion y agregado de boton en campanñia fiel compañero

--- a/css/campaigns.css
+++ b/css/campaigns.css
@@ -30,6 +30,11 @@
 	  font-weight: 700;
 }
 
+.campaign_fiel_compa .content_frase .btn-primary {
+	margin-top: 15px;
+	margin-bottom: 10px;
+}
+
 .campaign_fiel_compa .content_logos {
 	  margin-bottom: 60px;
 	  margin-top: 30px;
