cambio de estilos, textos y logo en page campaign-fiel-companero.php

--- a/css/campaigns.css
+++ b/css/campaigns.css
@@ -314,11 +314,7 @@
 	  margin-top: 30px;
 	  display: flex;
 	  justify-content: space-around;
-	  align-items: center;
-}
-
-.campaign_fiel_compa .content_logos .featured {
-	width: 70px!important;
+	  align-items: flex-end;
 }
 /* Campaña Fiel Compañero end */
 
